<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <EditTextPreference android:title="@string/edit_preference_title"
        android:key="@string/edit_preference_default_search_key"
        android:defaultValue="@string/edit_preference_search_default_value"
        />
    <ListPreference android:title="@string/list_prefernence_order_title"
        android:key="@string/list_preference_orderBy_key"
        android:entries="@array/settings_order_by_labels"
        android:entryValues="@array/settings_order_by_values"
        android:defaultValue="@string/settings_order_by_relevence_value"
        />
    <ListPreference android:title="@string/list_preference_filter_title"
        android:key="@string/list_preference_filter_key"
        android:entries="@array/setting_arrays_filter_labels"
        android:entryValues="@array/setting_arrays_filte_values"
        android:defaultValue="@string/setting_filter_noen_value"/>
</PreferenceScreen>